# protakeoff-public

./: .env.example  .gitignore  App.tsx  Cargo.toml  README.md  add_license_types_and_templates.sql  docker-compose.yml  fix_template_rls.sql  index.css  index.html  metadata.json  package-lock.json  package.json  plan.md  sqlcode.sql  templateexample.json  templates_rows.json  types.ts  update_template_categories.sql
.github/workflows/: build-mac-intel.yml  release.yml
components/: BlueprintCanvas.tsx  ConfirmModal.tsx  DraggableLegend.tsx  EstimatesView.tsx  ExportModal.tsx  HelpModal.tsx  LicenseModal.tsx  Logo.tsx  NewItemModal.tsx  NewTemplateModal.tsx  NoteInputModal.tsx  PromptModal.tsx  PropertiesModal.tsx  Sidebar.tsx  TemplateManager.tsx  Tools.tsx  UploadModal.tsx
contexts/: ToastContext.tsx
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/convex/: auth.config.ts  http.ts  licenses.ts  schema.ts  seed_templates_data.ts  templates.ts
frontend/convex/_generated/: api.d.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: 2  Cargo.toml  build.rs  build_error.txt  build_log.txt  tauri.conf.json
frontend/src-tauri/.kreuzberg/ocr/: 33e65021591bfdcf.msgpack
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: commands.rs  doc_state.rs  error.rs  geometry.rs  ingestion_service.rs  main.rs  menu.rs  mupdf_bridge.c  mupdf_bridge.h  mupdf_wrapper.rs  project_io.rs  spatial.rs  vello_renderer.rs
frontend/src/components/: AboutModal.tsx  AddPagesModal.tsx  AppLayout.tsx  CalibrationDialog.tsx  ContextMenu.tsx  EstimatesView.tsx  ExportDialog.tsx  FileSelectionView.tsx  HelpGuideModal.tsx  HotkeysManager.tsx  LoadingOverlay.tsx  MarkupListPanel.tsx  NewProjectModal.tsx  NoteTextModal.tsx  PropertiesPanel.tsx  ScaleSelector.tsx  SearchPanel.tsx  Sidebar.tsx  TemplateSidebar.tsx  TemplatesView.tsx  Toolbar.tsx  WelcomeModal.tsx
frontend/src/lib/: clerkFetch.ts  convex.ts
frontend/src/stores/: useProjectStore.ts
frontend/src/types/: estimate.ts  search.ts  store.ts
frontend/src/utils/: HistoryManager.ts  MarkupManager.ts  MigrationService.ts  (+15 more)
hooks/: useHistory.ts  useKeyboardShortcuts.ts
schemas/: schema.fbs  schema.sql
services/: geminiService.ts  licenseService.ts  supabaseClient.ts  templateService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  license.rs  main.rs
utils/: geometry.ts  math.ts  pdfExport.ts  pdfWorker.ts  storage.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
(+40 files in other folders)
