[package]
name = "protakeoff-ai"
version = "0.1.0"
description = "ProTakeoff AI"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-store = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-http = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
machine-uid = "0.5"
rsa = "0.9"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
