[package]
name = "protakeoff-tauri"
version = "0.1.0"
description = "High-performance Desktop Takeoff Tool"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }
cc = "1.0"
pkg-config = "0.3"

[dependencies]
tauri = { version = "2.2.0", features = ["devtools"] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-fs = "2.2.0"
machine-uid = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# R-Tree for high-performance spatial indexing of vectors
rstar = "0.12" 
# libc for FFI with MuPDF
libc = "0.2"
# Mutex and lazy_static for global state
once_cell = "1.19"
thiserror = "1.0"
# For base64 encoding if needed for legacy parts
base64 = "0.22"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-os = "2"
uuid = { version = "1.19.0", features = ["v4"] }
tauri-plugin-http = { version = "2.2.0", features = ["unsafe-headers"] }
tauri-plugin-deep-link = "2"

# High-performance CPU-based 2D vector renderer (SIMD + multithreading)
# Note: Not yet on crates.io, using git dependency from linebender/vello
vello_cpu = { git = "https://github.com/linebender/vello", features = ["multithreading", "png", "std"] }
# For detecting optimal thread count
num_cpus = "1.16"
# Document intelligence: Text extraction, OCR, and metadata
# Using git until stable crates.io release
pdfium-render = "0.8"
kreuzberg = { git = "https://github.com/kreuzberg-dev/kreuzberg", features = ["pdf", "ocr", "language-detection", "tokio-runtime"] }
# Async runtime for kreuzberg
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

